Weather info for current city grouped date wise Display message if location access is not given Fetch and show data based on current GPS permissions

--- a/WeatherForecast/Podfile
+++ b/WeatherForecast/Podfile
@@ -11,6 +11,7 @@ target 'WeatherForecast' do
 	pod 'MBProgressHUD'
 	pod 'ReachabilitySwift'
 	pod 'Toaster'
+	pod 'AFDateHelper'
 	
   target 'WeatherForecastTests' do
     inherit! :search_paths
